@@ -1,5 +1,10 @@
 2006-01-25  Guillem Jover  <guillem.jover@nokia.com>
 
+	* launcher/launcher.c (main): Move console quieting logic to ...
+	(console_quiet): ... here. Redirect output to syslog when being quiet.
+
+2006-01-25  Guillem Jover  <guillem.jover@nokia.com>
+
 	* launcher/launcher.c (main): Rename daemonize variable to daemon.
 	Move daemonization logic to ...
 	(daemonize): ... here. New function. Change dir to root.
